--- a/src/docs/04_solution_strategy.adoc
+++ b/src/docs/04_solution_strategy.adoc
@@ -6,7 +6,7 @@ This application is implemented using Javascript, React.js, SOLID specifications
 
 Allows users to authenticate into the system with their SOLID account and manage their routes (stored inside their pod). These routes can be created by the user, already predefined in the system or shared by other users.
 
-Pod decentralised data storage alongside a route shape standard provide our application with interoperability with other route management systems, like all the other Viade proyects. Moreover, GPX is also supported.
+Pod decentralised data storage alongside a route shape standard provide our application with interoperability with other route management systems, like all the other Viade proyects.
 
 === Some solution approaches
 [options="header", cols="1, 1, 3, 1"]
